--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> -->
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="main.js" charset="utf-8"></script>
@@ -13,9 +12,11 @@
   <body>
     <main>
       <div class="slider">
+        <!-- Freccia sx -->
         <div class="prev">
           <i class="fas fa-chevron-left"></i>
         </div>
+        <!-- Immagini -->
         <div class="images">
           <img class="first active" src="img/img1.jpeg" alt="foto 1">
           <img src="img/img2.jpeg" alt="foto 2">
@@ -23,10 +24,12 @@
           <img src="img/img4.jpeg" alt="foto 4">
           <img class="last" src="img/img5.jpeg" alt="foto 5">
         </div>
+        <!-- Freccia dx -->
         <div class="next">
           <i class="fas fa-chevron-right"></i>
         </div>
       </div>
+      <!-- Pallini -->
       <div class="dots">
         <i class="fas fa-circle first active"></i>
         <i class="fas fa-circle"></i>
